--- a/notion-github-sync/action.yml
+++ b/notion-github-sync/action.yml
@@ -21,12 +21,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-      repository: 'MathGaps/integrations'
-      with:
-        fetch-depth: 0
-        token: ${{ inputs.github-token }}
+    - uses: actions/checkout@v3
     - name: Move ./notion-github-sync to .
       shell: bash
       run: mv ./notion-github-sync/* ./notion-github-sync/.* .
