--- a/notion-github-sync/action.yml
+++ b/notion-github-sync/action.yml
@@ -21,10 +21,14 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: actions/checkout@v3
-    - name: Move ./notion-github-sync to .
+    # - uses: actions/checkout@v3
+    # - name: Move ./notion-github-sync to .
+    #   shell: bash
+    #   run: mv ./notion-github-sync/* ./notion-github-sync/.* .
+    - name: Debug info
       shell: bash
-      run: mv ./notion-github-sync/* ./notion-github-sync/.* .
+      run: |
+        ls -la
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
