--- a/notion-github-sync/action.yml
+++ b/notion-github-sync/action.yml
@@ -21,7 +21,12 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - uses: actions/checkout@v3
+    - name: Add Integrations dir to env
+      shell: bash
+      run: |
+        echo COMP_DIR=$ACTION_PATH/notion-github-sync >> $GITHUB_ENV
+      env:
+        ACTIONS_PATH: ${{ github.actions_path }}
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
@@ -30,19 +35,19 @@ runs:
       id: cache
       uses: actions/cache@v2
       with:
-        path: ./integrations/notion-github-sync/node_modules
+        path: ${{ format('{0}/node_modules', env.COMP_DIR) }}
         key: modules-${{ hashFiles('package-lock.json') }}
     - name: Install dependencies
       if: steps.cache.outputs.cache-hit != 'true'
       run: npm ci --ignore-scripts
       shell: bash
-      working-directory: ./integrations/notion-github-sync
+      working-directory: ${{ env.COMP_DIR }}
     - name: Start synchronization
       shell: bash
       run: node ./index.js
-      working-directory: ./integrations/notion-github-sync
+      working-directory: ${{ env.COMP_DIR }}
       env:
+        GITHUB_REPO: ${{ github.repository }}
         GITHUB_TOKEN: ${{ inputs.github-token }}
         NOTION_TOKEN: ${{ inputs.notion-token }}
         NOTION_DATABASE_ID: ${{ inputs.notion-database-id }}
-        GITHUB_REPO: ${{ github.repository }}
